[tool.poetry]
name = "Hotel"
version = "0.1.0"
description = ""
authors = ["DKl1 <klymbag@gmail.com>"]
readme = "README.md"
packages = [{include = "../Hotel"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"