[tool.poetry]
name = "flask_project"
version = "0.1.0"
description = ""
authors = ["DKl1 <klymbag@gmail.com>"]
readme = "README.md"
packages = [{include = "../flask_project"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
waitress = "^2.1.2"
sqlalchemy = "^1.4.43"
alembic = "^1.8.1"
PyMySQL = "^1.0.2"
flask-marshmallow = "^0.14.0"
marshmallow = "^3.18.0"
validators = "^0.20.0"
marshmallow-sqlalchemy = "^0.28.1"
SQLAlchemy-serializer = "^1.4.1"
Flask-Bcrypt = "^1.0.1"
Flask-HTTPAuth = "^4.7.0"
cryptography = "^38.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"